--- a/style.css
+++ b/style.css
@@ -28,13 +28,13 @@
 
 .header-ul {
     display: flex;
-    justify-content: space-between;
-    align-items: center;
+    /*justify-content: space-between;*/
+    /*align-items: center;*/
 }
 
 .header-ul li{
     list-style-type: none;
-    font-size: 20px;
+    font-size: 23px;
     margin: 10px auto;
     padding: 0 10px;
 }
@@ -74,33 +74,34 @@
     height: 60px;
     background-color: #BB0000;
     display: flex;
+    border-bottom: lightgrey;
 
 }
 
 .nav-logo {
-    width: 210px;
+    width: 290px;
     height: 60px;
     display: flex;
     justify-content: center;
     align-items: center;
     background-color: #fff;
-    transform: skewX(-15deg);
+    transform: skewX(-17deg);
 }
 
 .nav-lists {
     width: 100%;
-    margin-right: 25px;
+    margin-right: 70px;
 }
 
 .nav-lists ul {
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-between;
     align-items: center;
 }
 
 .nav-lists ul li {
     list-style-type: none;
-    font-size: 12px;
+    font-size: 14px;
     margin: 20px auto;
 }
 
@@ -123,7 +124,7 @@
 
 .nav-search {
     margin: 17px auto;
-    font-size: 18px;
+    font-size: 22px;
     color: white;
     cursor: pointer;
 }
@@ -134,6 +135,196 @@
 
 
 
+/******main******/
+
+.main-content {
+    width: 100%;
+    height: 100vh;
+    display: flex;
+}
+
+.main-slider {
+    width: 790px;
+    height: 500px;
+}
+
+.main-image {
+    height: 395px;
+    position: relative;
+}
+
+.main-image img {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+}
+
+.main-image  p {
+    position: absolute;
+    top: 240px;
+    left: 30px;
+    color: white;
+    font-size: 38px;
+    font-weight: 700;
+    cursor: pointer;
+}
+
+.main-aa22 {
+    position: absolute;
+    top: 210px;
+    left: 30px;
+    border: none;
+    width: 70px;
+    height: 20px;
+    background-color: #BB0000 ;
+    color: white;
+    cursor: pointer;
+}
+
+.main-image span {
+    position: absolute;
+    top: 345px;
+    left: 30px;
+    color: grey;
+    font-size: 15px;
+}
+
+.next {
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    border: none;
+    width: 45px;
+    height: 45px;
+    background-color: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: black;
+    font-size: 25px;
+    font-weight: bolder;
+    cursor: pointer;
+}
+
+.prev:hover {
+    color: black;
+    transition: 0.5s;
+}
+
+.prev {
+    position: absolute;
+    right: 0;
+    bottom: 45px;
+    border: none;
+    width: 45px;
+    height: 45px;
+    background-color: #BB0000;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    font-size: 25px;
+    font-weight: bolder;
+    cursor: pointer;
+}
+
+.bottom-slider {
+    width: 790px;
+    height: 105px;
+    display: flex;
+    justify-content: space-between;
+
+}
+.slide-bottom {
+    margin-top: 16px;
+    cursor: pointer;
+
+}
+
+.slide-bottom img:hover {
+    border: 2px solid #BB0000;
+    transition: 5ms;
+    transform: scale(0.9);
+}
+
+.left-block {
+    width: 385px;
+    height: 800px;
+    margin-top: 35px;
+    margin-left: 35px;
+    position: fixed;
+    right: 150px;
+    overflow-y: scroll;
+    border: 1px solid #EEEEEE;
+}
+
+.lrahos-title {
+    border-top: 2px solid #BB0000;
+    position: fixed;
+    width: 385px;
+    height: 100px;
+    display: flex;
+    background-color: #EEEEEE;
+
+}
+
+.logo-glob {
+    width: 52px;
+    height: 52px;
+    background-color: #BB0000;
+    position: relative;
+    top: 20px;
+    left: 118px;
+
+}
+
+.logo-glob img {
+    position: absolute;
+    top: 9px;
+    left: 9px;
+    width: 35px;
+    height: 35px;
+}
+
+.lrahos-title p {
+    font-size: 25px;
+    font-weight: bold;
+    padding-left: 125px;
+    padding-top: 30px;
+}
+
+.post-block {
+    width: 100%;
+    flex-wrap: wrap;
+    margin-top: 100px;
+}
+
+.article-post {
+    width: 370px;
+    height: 130px;
+
+    padding: 10px;
+    display: flex;
+    border-bottom: 1px solid lightgrey;
+}
+
+.article-post img {
+    width: 115px;
+    height: 80px;
+    object-fit: cover;
+}
+
+.article-post p {
+    font-weight: bolder;
+    padding: 7px;
+    line-height: 20px;
+}
+
+
+.article-post p:hover{
+    color: #BB0000;
+    cursor: pointer;
+}
 
 
 
